--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2064,11 +2064,11 @@ section,
   align-items: center;
 }
 
-.service-details ul i {
+/* .service-details ul i {
   font-size: 20px;
   margin-right: 8px;
   color: var(--accent-color);
-}
+} */
 
 /*--------------------------------------------------------------
 # Starter Section Section
