--- a/templates/index.html
+++ b/templates/index.html
@@ -1096,7 +1096,7 @@
             <p><strong>Email:</strong> <span>quantumquillinfotech@gmail.com</span></p>
           </div>
         </div>
-
+<!-- /Contact Section -->
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
